--- a/melody-sequencer/package.json
+++ b/melody-sequencer/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tonejs/midi": "^2.0.28",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
