--- a/melody-sequencer/v2/package.json
+++ b/melody-sequencer/v2/package.json
@@ -6,32 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.4.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "tone": "^15.1.3",
-    "@magenta/music": "^1.23.1",
-    "@tonejs/midi": "^2.0.28"
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "tone": "15.1.3"
   },
   "devDependencies": {
-    "@types/node": "22.10.5",
-    "@types/react": "18.3.18",
-    "@types/react-dom": "18.3.5",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@types/jest": "^29.5.14",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "9.17.0",
-    "eslint-config-next": "15.4.3",
-    "jsdom": "^26.0.0",
-    "postcss": "8.5.4",
-    "tailwindcss": "3.4.17",
-    "typescript": "5.0.0",
-    "vitest": "^2.1.8"
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "postcss": "8.4.39",
+    "tailwindcss": "3.4.4",
+    "typescript": "5.5.3"
   }
 }
