--- a/melody-sequencer/v2/package.json
+++ b/melody-sequencer/v2/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@magenta/music": "^1.23.1",
     "midi-writer-js": "^3.1.1",
     "next": "14.2.5",
     "react": "18.3.1",
